<resources>
    <string name="app_name">FSeller</string>
    <string name="default_notification">Hi there</string>
    <string name="login">Iniciar Sesion</string>
    <string name="forgot_pass"><a href="https://www.linio.cl/account/password/recover/request">¿Se te olvidó tu contraseña?</a></string>
    <string name="text_orders">Pedidos</string>
    <string name="see_detail">Ver el detalle → </string>
    <string name="empty_credencials">Ingresa los datos correctamente</string>
    <string name="wrong_username">Revisa tus credenciales y vuelve a intentar</string>
    <string name="text_filter_active">En ruta</string>
    <string name="text_filter_retry">Reintentos</string>
    <string name="text_filter_cancel">Cancelados</string>
    <string name="text_filter_all">Todos</string>
    <string name="text_order_statuses">Estados del pedido</string>
    <string name="text_order_detail">Detalle del pedido</string>
    <string name="prefs_file">prefs</string>


    <!-- TASK DETAIL-->
    <string name="text_realized_by">Realizado por</string>
    <string name="text_date_detail">Fecha de solicitud</string>
    <string name="text_payment_method">Medio de pago</string>
    <string name="text_see_map">Ver mapa</string>
    <string name="text_delivered">Entregado</string>
    <string name="text_postpone">Postergar\nPedido</string>
    <string name="text_refuse">Rechazar\npedido</string>
    <string name="text_order_detail_with_number">Detalle del pedido %1$s</string>


    <string name="content_description_retail_logo">Logo Retail</string>
    <string name="no_order_in_list">Sin resultados</string>
    <string name="order_number">Pedido #%s</string>
    <string name="made_by">Realizada por: %s</string>
    <string name="delivety_date">Fecha entrega: %s</string>
    <string name="delivety_date_label">Fecha entrega</string>
    <string name="got_it">Aceptar</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pospone_date">Elige la fecha a posterga</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="visit_registration_title">Registro de Visita</string>
    <string name="who_received">Nombre de quien recibe</string>
    <string name="rut">Rut</string>
    <string name="order_delivered">¿El pedido fue entregado?</string>
    <string name="reschedule">Reagendar Visita</string>
    <string name="comment">Ingresa un comentario</string>
    <string name="picture_of_delivery">Foto de la entrega del pedido</string>
    <string name="fail_delivery">No se ha podido registrar el envio, intenta nuevamente</string>
    <string name="success_delivery">Felicidades!! Haz hecho un excelente trabajo</string>
    <string name="empty_ip">Ingresa la IP de tu equipo para continuar</string>

</resources>