<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            layout="@layout/head_fragment_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/include"
            tools:layout_editor_absoluteX="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/source_sans_pro_reg"
                android:lineSpacingExtra="16sp"
                android:text="@string/visit_registration_title"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_delivered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

        <RadioGroup
            android:id="@+id/rdo_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/title_radio">

            <RadioButton
                android:id="@+id/rdo_button_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/rdo_button_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/visit_register_who_receive_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:textColorHint="@color/greenBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rdo_group">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/visit_register_who_receive_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/who_received"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLength="30"
                android:textColor="@color/greenBank"
                android:textColorHint="@color/greenBank" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/visit_register_rut_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:textColorHint="@color/greenBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/visit_register_who_receive_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/visit_register_rut_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="1234567890kK-"
                android:hint="@string/rut"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLength="10"
                android:textColor="@color/greenBank"
                android:textColorHint="@color/greenBank" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/visit_register_date_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:textColorHint="@color/greenBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/visit_register_rut_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/visit_register_date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/reschedule"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLength="11"
                android:textColor="@color/greenBank"
                android:textColorHint="@color/greenBank" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/visit_register_comment_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:textColorHint="@color/greenBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/visit_register_date_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/visit_register_comment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/comment"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLength="100"
                android:textColor="@color/greenBank"
                android:textColorHint="@color/greenBank" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/title_take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/picture_of_delivery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visit_register_comment_input_layout" />

        <ImageButton
            android:id="@+id/btn_take_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_take_photo"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:layout_constraintEnd_toStartOf="@+id/photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_take_photo"
            app:srcCompat="@drawable/ic_camera" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_take_photo"
            app:layout_constraintTop_toBottomOf="@+id/title_take_photo"
            app:srcCompat="@drawable/ic_not_image" />

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ripple_green"
            android:text="@string/got_it"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_take_photo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>